--- a/src/Containers/HomePage/style.css
+++ b/src/Containers/HomePage/style.css
@@ -105,7 +105,7 @@
 .messageStyle{
     background: #103631;
     display: inline-block;
-    padding: 5px 10px;
+    padding: 5px 3px 5px 7px;
     border-radius: 10px;
     margin: 5px;
     display: inline-block;
