--- a/src/Components/UI/Card/style.css
+++ b/src/Components/UI/Card/style.css
@@ -3,4 +3,6 @@
     border: 1px solid #eee;
     background: #fff;
     box-shadow: 0 0 5px 1px #ccc;
+    display: flex;
+    justify-content: center;
 }
