--- a/src/Containers/RegisterPage/RegisterComponent.css
+++ b/src/Containers/RegisterPage/RegisterComponent.css
@@ -12,7 +12,7 @@ input:invalid[focused="true"] ~ span{
     display: block;
 }
 
-input {
+/* input {
     border-radius: 5px;
     height: 25px;
     width: 100%;
@@ -22,4 +22,4 @@ input {
 input:focus {
     outline: none;
    
-}
+} */
