--- a/src/Containers/HomePage/style.css
+++ b/src/Containers/HomePage/style.css
@@ -19,25 +19,27 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
 }
 .listOfUsers{
     width: 30%;
     height: 100%;
     overflow-x: hidden;
     border-right: 1px solid rgb(61, 60, 60);
-    background-color:#131C23
+    background-color:#131C23;
 }
 .chatArea{
-    width: 70%;
+    width: 100%;
     height: 100%;
     overflow-x: hidden;
     position: relative;
-    background-image: url('1288076.jpg')
+    background-image: url('1288076.jpg');
 }
 .chatHeader{
     position: fixed;
     display: flex;
-    width: 70%;
+    width: 82%;
     height: 40px;
     background: #2A2F32;
     /* text-align: start; */
@@ -52,7 +54,7 @@
     display: flex;
     position: fixed;
     justify-content: center;
-    width: 70%;
+    width: 82%;
     height: 40px;
     bottom: 0;
     background-color: #2A2F32;
