--- a/src/Containers/HomePage/style.css
+++ b/src/Containers/HomePage/style.css
@@ -13,14 +13,14 @@
   
   
 
-.container{
+.container1{
     display: flex;
     position: absolute;
     width: 100%;
     height: 100%;
     overflow: hidden;
-    padding-left: 0px !important;
-    padding-right: 0px !important;
+    /* padding-left: 0px !important;
+    padding-right: 0px !important; */
 }
 .listOfUsers{
     width: 30%;
@@ -54,7 +54,7 @@
     display: flex;
     position: fixed;
     justify-content: center;
-    width: 82%;
+    width:80%;
     height: 40px;
     bottom: 0;
     background-color: #2A2F32;
@@ -67,6 +67,7 @@
     border-style: none;
     background-color: #43474b;
     caret-color: white;
+    color:white;
     padding-left: 10px;
 }
 .chatControls input:focus{
