--- a/src/Containers/HomePage/style.css
+++ b/src/Containers/HomePage/style.css
@@ -10,6 +10,20 @@
     background-color: rgb(189, 92, 28);
     /* outline: 1px solid slategrey; */
   }
+
+.listOfUsers::-webkit-scrollbar {
+    width: 0.1em;
+  }
+   
+  .listOfUsers::-webkit-scrollbar-track {
+      background-color: rgb(61, 60, 60);
+    /* box-shadow: inset 0 0 6px rgba(40, 97, 18, 0.3); */
+  }
+   
+  .listOfUsers::-webkit-scrollbar-thumb {
+    background-color: rgb(189, 92, 28);
+    /* outline: 1px solid slategrey; */
+  }
   
   
 
@@ -39,7 +53,7 @@
 .chatHeader{
     position: fixed;
     display: flex;
-    width: 82%;
+    width: 80%;
     height: 40px;
     background: #2A2F32;
     /* text-align: start; */
@@ -54,13 +68,14 @@
     display: flex;
     position: fixed;
     justify-content: center;
-    width:80%;
+    width:77%;
     height: 40px;
     bottom: 0;
     background-color: #2A2F32;
     align-items: center;
 }
 .chatControls input{
+    
     border-radius: 20px;
     height: 25px;
     width: 80%;
@@ -73,9 +88,7 @@
 .chatControls input:focus{
     outline: none;
 }
-.chatControls button{
-    width: 10%;
-}
+
 
 .displayName{
     display: flex;
